[gd_scene load_steps=31 format=2]

[ext_resource path="res://assets/kenshape_assets/gun/clip only.png" type="Texture" id=1]
[ext_resource path="res://godot_tools/CommonAssets/font/Overlock/Overlock-Black.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/kenshape_assets/corner.png" type="Texture" id=3]
[ext_resource path="res://assets/images/bullet.png" type="Texture" id=4]
[ext_resource path="res://assets/kenshape_assets/ammo/food/cupcake/cupcake.png" type="Texture" id=5]
[ext_resource path="res://scenes/prefabs/hud.gd" type="Script" id=6]
[ext_resource path="res://assets/kenshape_assets/ammo/misc/cigarette/cigarette/cigarette.png" type="Texture" id=7]
[ext_resource path="res://assets/themes/hud.tres" type="Theme" id=8]
[ext_resource path="res://scenes/particles/heart.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/prefabs/pqueue.gd" type="Script" id=10]
[ext_resource path="res://scenes/particles/armor.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/ui/status bar/status bar/status bar overlayer.png" type="Texture" id=12]
[ext_resource path="res://assets/ui/status bar/status bar/status bar underlayer.png" type="Texture" id=13]
[ext_resource path="res://assets/ui/status bar/status bar/status bar health texture.png" type="Texture" id=14]
[ext_resource path="res://assets/ui/status bar/status bar/status bar armor texture.png" type="Texture" id=15]

[sub_resource type="Animation" id=1]
resource_name = "reload"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("../ammo:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 0.5, 0.5, 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1e-05, 2 ), Vector2( 1e-05, 2 ), Vector2( 2, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 0.5, 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 90, 980 ), Vector2( -90, 880 ), Vector2( 90, 980 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0, 0.0 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "update_ammo_counter"
} ]
}

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
direction = Vector3( 1, -1, 0 )
spread = 0.0
gravity = Vector3( -10000, 4000, 0 )
initial_velocity = 3000.0
initial_velocity_random = 0.3
angular_velocity = 200.0
angular_velocity_random = 0.3
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.4

[sub_resource type="DynamicFont" id=3]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=4]
resource_name = "set_ammo"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 3, 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ -230.0, 0.0 ]
}

[sub_resource type="DynamicFontData" id=5]
font_path = "res://assets/fonts/Akira Expanded Demo.otf"

[sub_resource type="DynamicFont" id=6]
size = 22
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 5 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0.784314 )

[sub_resource type="Animation" id=8]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ -90.0, 0.0 ]
}

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="DynamicFont" id=10]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="CanvasItemMaterial" id=11]
blend_mode = 1

[sub_resource type="Curve" id=12]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.896226, 0 ), -0.801851, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=13]
curve = SubResource( 12 )

[sub_resource type="ParticlesMaterial" id=14]
emission_shape = 2
emission_box_extents = Vector3( 200, 100, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 90.0
gravity = Vector3( 0, 1000, 0 )
initial_velocity = 600.0
initial_velocity_random = 1.0
angular_velocity = 200.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 720.0
angle_random = 1.0
scale = 15.0
scale_curve = SubResource( 13 )
color = Color( 5, 5, 5, 1 )

[sub_resource type="Animation" id=15]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ -90.0, 0.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Panel/Particles2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "restart"
} ]
}

[node name="gui" type="Control" groups=[
"hud",
]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.607843 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -270.0
margin_right = 336.0
rect_min_size = Vector2( 112, 90 )
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="clipflat" type="Sprite" parent="."]
position = Vector2( 90, 980 )
scale = Vector2( 14, 14 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="clipflat"]
anims/reload = SubResource( 1 )

[node name="Particles2D" type="Particles2D" parent="clipflat"]
show_behind_parent = true
position = Vector2( -110, -286.773 )
emitting = false
amount = 5
lifetime = 0.66
speed_scale = 2.0
process_material = SubResource( 2 )
texture = ExtResource( 4 )

[node name="ammo" type="Label" parent="."]
margin_left = 138.097
margin_top = 885.606
margin_right = 231.097
margin_bottom = 945.606
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 3 )
text = "27"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="maxammo" type="Label" parent="."]
margin_left = 139.221
margin_top = 1010.34
margin_right = 195.221
margin_bottom = 1070.34
custom_fonts/font = SubResource( 3 )
text = "30"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ammo_type" type="Sprite" parent="."]
position = Vector2( 69.3354, 878.327 )
rotation = -4.01426
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 5 )
__meta__ = {
"_editor_description_": "w"
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ammo_type"]
anims/set_ammo = SubResource( 4 )

[node name="HealthDisplay" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -568.5
margin_top = -108.0
margin_right = 568.5
rect_min_size = Vector2( 1137, 108 )
rect_pivot_offset = Vector2( 568, 110 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pqueue" type="Node2D" parent="HealthDisplay"]
position = Vector2( 350, 10 )
script = ExtResource( 10 )
particle = ExtResource( 9 )

[node name="pqueuearmor" type="Node2D" parent="HealthDisplay"]
position = Vector2( 350, 10 )
script = ExtResource( 10 )
particle = ExtResource( 11 )

[node name="under" type="TextureRect" parent="HealthDisplay"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 200, 25 )
rect_pivot_offset = Vector2( 500, 73 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
texture = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="HealthDisplay"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 200, 25 )
rect_scale = Vector2( 1.5, 1.5 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
value = 50.0
texture_progress = ExtResource( 14 )

[node name="health" type="Label" parent="HealthDisplay/HealthBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 58.9441
margin_top = 41.38
margin_right = -878.056
margin_bottom = -41.62
rect_min_size = Vector2( 200, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
text = "hello"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArmorBar" type="TextureProgress" parent="HealthDisplay"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -379.0
margin_bottom = -36.0
rect_min_size = Vector2( 200, 25 )
rect_scale = Vector2( 1.5, 1.5 )
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 50.0
value = 50.0
texture_progress = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="armor" type="Label" parent="HealthDisplay/ArmorBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 58.4991
margin_top = 7.56415
margin_right = -499.501
margin_bottom = -39.4359
rect_min_size = Vector2( 200, 25 )
custom_fonts/font = SubResource( 6 )
text = "hello"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="over" type="TextureRect" parent="HealthDisplay"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 200, 25 )
rect_pivot_offset = Vector2( 500, 73 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="new_ammo" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.00012207
margin_bottom = -680.0
theme = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="new_ammo"]
margin_left = 760.0
margin_top = 100.0
margin_right = 1160.0
margin_bottom = 300.0
rect_min_size = Vector2( 400, 200 )
rect_rotation = -90.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 200, 100 )
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="new_ammo/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="new_ammo/Panel/VBoxContainer"]
margin_right = 400.0
margin_bottom = 23.0
size_flags_horizontal = 3
text = "new ammo!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="new_ammo/Panel/VBoxContainer"]
margin_top = 27.0
margin_right = 400.0
margin_bottom = 31.0

[node name="HBoxContainer" type="HBoxContainer" parent="new_ammo/Panel/VBoxContainer"]
margin_top = 35.0
margin_right = 400.0
margin_bottom = 135.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ammo_ico" type="TextureRect" parent="new_ammo/Panel/VBoxContainer/HBoxContainer"]
margin_left = 49.0
margin_right = 149.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 6
size_flags_vertical = 2
texture = ExtResource( 7 )
expand = true

[node name="ammo_name" type="Label" parent="new_ammo/Panel/VBoxContainer/HBoxContainer"]
margin_left = 202.0
margin_right = 400.0
margin_bottom = 100.0
size_flags_horizontal = 7
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "cigarette"
align = 1
valign = 1

[node name="tip" type="Label" parent="new_ammo/Panel/VBoxContainer"]
margin_left = 142.0
margin_top = 139.0
margin_right = 257.0
margin_bottom = 200.0
size_flags_horizontal = 4
size_flags_vertical = 3
text = "press f to take"

[node name="AnimationPlayer" type="AnimationPlayer" parent="new_ammo"]
anims/show = SubResource( 8 )

[node name="wave_info" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 8 )

[node name="Panel" type="Panel" parent="wave_info"]
margin_left = 760.0
margin_top = 440.0
margin_right = 1160.0
margin_bottom = 640.0
rect_min_size = Vector2( 400, 200 )
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 200, 100 )
custom_styles/panel = SubResource( 9 )

[node name="title" type="Label" parent="wave_info/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 10 )
text = "Enemies inbound
Wave:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Particles2D" type="Particles2D" parent="wave_info/Panel"]
material = SubResource( 11 )
position = Vector2( 200, 100 )
emitting = false
amount = 128
lifetime = 1.5
one_shot = true
speed_scale = 1.5
explosiveness = 1.0
process_material = SubResource( 14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="wave_info"]
anims/show = SubResource( 15 )

[node name="waveTimer" type="Timer" parent="wave_info"]
wait_time = 3.0
one_shot = true
[connection signal="timeout" from="wave_info/waveTimer" to="." method="_on_waveTimer_timeout"]
